# fastapi

./: Makefile  alembic.ini  build.sh  pyproject.toml
app/: config.py  log.py  main.py  security.py
app/api/: main.py
app/api/routes/: auth.py
app/crud/: base.py  user.py
app/database/: db.py
app/migrations/: env.py
app/models/: base_model.py  user.py
app/schemas/: auth.py  user.py
app/tests/: conftest.py
app/tests/unit/: test_db.py  test_security.py
